simulatron-salt/src/lib/snapshots/simulatron_salt__tests__empty.snap
---
source: src/lib/tests.rs
expression: failure

---
CodegenFailure {
    errors: [
        SaltError {
            span: 0..0,
            message: "Cannot compile an empty file.",
        },
    ],
    warnings: [],
}
