simulatron-salt/src/lib/snapshots/simulatron_salt__tests__external_refs.snap
---
source: src/lib/tests.rs
expression: pretty_print_hex_block(&object_code.code)

---
0x00000000    53 49 4D 4F  42 4A 00 01  00 00 00 02  00 00 00 01  |SIMOBJ..........|
0x00000010    45 00 00 00  00 10 4C 4F  4F 4B 53 5F  4C 49 4B 45  |E.....LOOKS_LIKE|
0x00000020    5F 43 4F 4E  53 54 00 00  00 01 00 00  00 58 45 00  |_CONST.......XE.|
0x00000030    00 00 00 0F  6C 6F 6F 6B  73 5F 6C 69  6B 65 5F 64  |....looks_like_d|
0x00000040    61 74 61 00  00 00 01 00  00 00 52 10  00 00 00 0C  |ata.......R.....|
0x00000050    06 00 00 00  00 00 06 00  00 00 00 00               |............|
