simulatron-salt/src/lib/snapshots/simulatron_salt__tests__naming_violations.snap
---
source: src/lib/tests.rs
expression: pretty_print_hex_block_zero(&success.simobj)

---
0x00000000    53 49 4D 4F  42 4A 00 01  00 00 00 04  00 00 00 02  |SIMOBJ..........|
0x00000010    49 00 00 00  65 04 44 42  61 64 00 00  00 00 49 00  |I...e.DBad....I.|
0x00000020    00 00 64 0D  4C 61 62 65  6C 41 6C 73  6F 47 6F 6F  |..d.LabelAlsoGoo|
0x00000030    64 00 00 00  00 49 00 00  00 69 06 64  5F 67 6F 6F  |d....I...i.d_goo|
0x00000040    64 00 00 00  00 49 00 00  00 63 0A 6C  61 62 65 6C  |d....I...c.label|
0x00000050    5F 67 6F 6F  64 00 00 00  00 11 00 00  00 02 04 00  |_good...........|
0x00000060    00 00 08 00  00 42 62 3D  71 42 29 AE  14           |.....Bb=qB)..|
