simulatron-salt/src/lib/snapshots/simulatron_salt__tests__push_pop-2.snap
---
source: src/lib/tests.rs
expression: failure

---
CodegenFailure {
    errors: [
        SaltError {
            span: 4..6,
            message: "Cannot use a literal here.",
        },
        SaltError {
            span: 10..16,
            message: "Symbol references resolve to addresses, which can't be used here.",
        },
    ],
    warnings: [],
}
