simulatron-salt/src/lib/snapshots/simulatron_salt__tests__swap.snap
---
source: src/lib/tests.rs
expression: pretty_print_hex_block(&object_code.code)

---
0x00000000    53 49 4D 4F  42 4A 00 01  00 00 00 01  00 00 00 02  |SIMOBJ..........|
0x00000010    49 00 00 00  3A 03 66 6F  6F 00 00 00  01 00 00 00  |I...:.foo.......|
0x00000020    28 11 00 00  00 0F 0C 00  00 00 00 00  0C 01 00 00  |(...............|
0x00000030    50 00 0D 02  03 0C 00 00  00 04 00 00  00 40        |P............@|
